--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,8 @@
-
-
-spring.devtools.restart.poll-interval=2s
-spring.devtools.restart.quiet-period=1s
-
 spring.jpa.show-sql=true
-
 
 spring.datasource.url=jdbc:mariadb://localhost:3308/masterpiece?useUnicode=true
 spring.datasource.username=masterpiece
 spring.datasource.password=masterpiece
 
-
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=none
